# thePit

./: Current InvConv.patch  EQ SPDat-Spell Files.7z  IPS.7z  OT.7z  README.md  blip.txt  bot follow data.ods  clean_up.diff  conversion.patch  inventory.cpp  inventory.h  item2.cpp  item2.h
CLI Forms Application - Blank/: CLI Forms Application - Blank.sln
CLI Forms Application - Blank/CLI Forms Application - Blank/: AssemblyInfo.cpp  CLI Forms Application - Blank.cpp  CLI Forms Application - Blank.vcxproj  CLI Forms Application - Blank.vcxproj.filters  Form1.h  ReadMe.txt  stdafx.cpp
Misc Patches/: Bots Proc and Instruments(2).patch  Bots Proc and Instruments.patch
ServerStart/: Form1.Designer.vb  Form1.vb  README.txt  ServerStart.sln  ServerStart.vbproj
ServerStart/My Project/: Application.Designer.vb  AssemblyInfo.vb  Resources.Designer.vb  Settings.Designer.vb
limitless_gs/: CMakeLists.txt
limitless_gs/common/: CMakeLists.txt  common_definitions.h  common_macros.h  common_types.cpp  common_types.h  object_item.cpp  object_item.h  profile_appearance.h  profile_classes.h  profile_identity.cpp  profile_identity.h  profile_inventory.cpp  profile_inventory.h  profile_item_containers.cpp  profile_item_containers.h  profile_item_data.cpp  profile_item_data.h  profile_item_upgrades.cpp  profile_item_upgrades.h  profile_races.h  profile_skills.h  profile_spatial.cpp  profile_spatial.h  profile_stats.cpp  profile_stats.h
limitless_gs/libraries/: _CMakeLists.txt
limitless_gs/world_shard/: CMakeLists.txt  actor_combatant.cpp  actor_combatant.h  actor_mobile.cpp  actor_mobile.h  actor_static.cpp  actor_static.h  actor_world.cpp  actor_world.h  manager_actor.cpp  manager_actor.h  manager_bonus.cpp  manager_bonus.h  world_shard.cpp  world_shard.h
opcode_handlers_output/: DEBUG.txt  Login_opcode_handlers.txt  REPORT.txt  RoF2_opcode_handlers.txt  RoF_opcode_handlers.txt  SoD_opcode_handlers.txt  SoF_opcode_handlers.txt  Titanium_opcode_handlers.txt  UCS_opcode_handlers.txt  UF_opcode_handlers.txt  UNDEFINED.txt  World_opcode_handlers.txt  Zone_opcode_handlers.txt
prime enumerator/: CLI Forms Application - Blank.exe.metagen
